[gd_scene load_steps=7 format=3 uid="uid://4nyaa4pbtnlu"]

[ext_resource type="PackedScene" uid="uid://cie6s8373brxb" path="res://scenes/ParticipantsHand.tscn" id="1_5j8fh"]
[ext_resource type="PackedScene" uid="uid://bq517aew6pkkl" path="res://scenes/Deck.tscn" id="1_cdw03"]
[ext_resource type="Script" path="res://scripts/GameTable.gd" id="1_r2y23"]
[ext_resource type="PackedScene" uid="uid://csm72u71wllj7" path="res://scenes/PlayersField.tscn" id="2_0lhrf"]
[ext_resource type="PackedScene" uid="uid://c7kiu5mm8n877" path="res://scenes/Pontis.tscn" id="2_2bwdj"]
[ext_resource type="PackedScene" uid="uid://fahpglxxt0j" path="res://scenes/Menu.tscn" id="6_j2clm"]

[node name="Master" type="Node"]

[node name="GameTable" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_r2y23")

[node name="ColorRect" type="ColorRect" parent="GameTable"]
offset_right = 1193.0
offset_bottom = 795.0
color = Color(0.215686, 0.290196, 0.145098, 1)

[node name="Deck" parent="GameTable" instance=ExtResource("1_cdw03")]
unique_name_in_owner = true
offset_left = 299.0
offset_top = 290.0
offset_right = 370.0
offset_bottom = 384.0

[node name="Pontis" parent="GameTable" instance=ExtResource("2_2bwdj")]
position = Vector2(407, 338)

[node name="PlayersField" parent="." instance=ExtResource("2_0lhrf")]
unique_name_in_owner = true
position = Vector2(206, 553)

[node name="ParticipantsHand" parent="PlayersField" instance=ExtResource("1_5j8fh")]
position = Vector2(167, 97)
active_player = true

[node name="PlayersField3" parent="." instance=ExtResource("2_0lhrf")]
unique_name_in_owner = true
position = Vector2(987, 202)
rotation = 3.14159

[node name="ParticipantsHand" parent="PlayersField3" instance=ExtResource("1_5j8fh")]
position = Vector2(-1.00001, 102)

[node name="PlayersField2" parent="." instance=ExtResource("2_0lhrf")]
unique_name_in_owner = true
position = Vector2(209, 23)
rotation = 1.5708

[node name="ParticipantsHand" parent="PlayersField2" instance=ExtResource("1_5j8fh")]
position = Vector2(76, 100)

[node name="PlayersField4" parent="." instance=ExtResource("2_0lhrf")]
unique_name_in_owner = true
position = Vector2(994, 785)
rotation = -1.5708

[node name="ParticipantsHand" parent="PlayersField4" instance=ExtResource("1_5j8fh")]
position = Vector2(117, 99)

[node name="Menu" parent="." instance=ExtResource("6_j2clm")]
unique_name_in_owner = true
offset_left = 535.0
offset_top = 294.0
offset_right = 535.0
offset_bottom = 294.0

[node name="SettingsButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 30.0
offset_bottom = 31.0
text = "âš™"

[connection signal="pressed" from="SettingsButton" to="Menu" method="_on_settings_button_pressed"]
